# NumFaith

./: .gitignore  LICENSE  Makefile  README.md  RESULTS.md  pyproject.toml  requirements.txt
config/: default.yaml
numfaith/: __init__.py  detectors.py  evaluate.py  load.py  perturb.py  report.py
results/: metrics.json
results/tables/: main_results.csv  main_results.md
scripts/: 01_build_dataset.py  02_run_detectors.py  03_make_report.py
tests/: test_perturb.py
