[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "numfaith"
description = "A numeric-faithfulness stress test for RAG hallucination detectors."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Baber Javed" }]
dynamic = ["version"]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "regex>=2023.0",
    "datasets>=2.14",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
]

[project.urls]
Repository = "https://github.com/baberjaved/numfaith"

[tool.setuptools]
packages = ["numfaith"]

[tool.setuptools.dynamic]
version = { attr = "numfaith.__version__" }
